--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,7 +4,8 @@
 
     <item
         android:id="@+id/main_menu_add"
-        android:icon="@android:drawable/ic_input_add"
+        android:icon="@drawable/ic_baseline_add_24"
         android:title="Add"
         app:showAsAction="always" />
+
 </menu>
