--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/nav_feed"
-        android:icon="@drawable/ic_baseline_dynamic_feed_24"
+        android:icon="@drawable/ic_earth"
         android:title="Feed" />
     <item
         android:id="@+id/nav_my_recipes"
@@ -13,4 +13,3 @@
         android:icon="@drawable/ic_baseline_person_24"
         android:title="Manage" />
 </menu>
-
